// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div
  className="AppMenu-root-108"
>
  <header
    className="MuiPaper-root-123 MuiPaper-elevation4-129 MuiAppBar-root-115 MuiAppBar-positionFixed-116 MuiAppBar-colorPrimary-121 mui-fixed"
  >
    <div
      className="MuiToolbar-root-150 MuiToolbar-regular-152 MuiToolbar-gutters-151 AppMenu-nowrap-110"
    >
      <button
        aria-label="Menu"
        className="MuiButtonBase-root-160 MuiIconButton-root-154 MuiIconButton-colorInherit-155 AppMenu-menuButton-111"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-159"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-163"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-170"
        />
      </button>
      <h2
        className="MuiTypography-root-177 MuiTypography-title-183 MuiTypography-colorInherit-196 AppMenu-flex-109"
      >
        Point Pods
      </h2>
    </div>
  </header>
  <div
    className="AppMenu-spacer-113"
  />
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div
  className="AppMenu-root-108"
>
  <header
    className="MuiPaper-root-123 MuiPaper-elevation4-129 MuiAppBar-root-115 MuiAppBar-positionStatic-119 MuiAppBar-colorPrimary-121"
  >
    <div
      className="MuiToolbar-root-150 MuiToolbar-regular-152 MuiToolbar-gutters-151 AppMenu-nowrap-110"
    >
      <button
        aria-label="Menu"
        className="MuiButtonBase-root-160 MuiIconButton-root-154 MuiIconButton-colorInherit-155 AppMenu-menuButton-111"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-159"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-163"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-170"
        />
      </button>
      <h2
        className="MuiTypography-root-177 MuiTypography-title-183 MuiTypography-colorInherit-196 AppMenu-flex-109"
      >
        Point Pods
      </h2>
    </div>
  </header>
  <div
    className="AppMenu-pad-114"
  />
</div>
`;

exports[`matches the prior snapshot 3`] = `
<div
  className="AppMenu-root-108"
>
  <header
    className="MuiPaper-root-123 MuiPaper-elevation4-129 MuiAppBar-root-115 MuiAppBar-positionFixed-116 MuiAppBar-colorPrimary-121 mui-fixed"
  >
    <div
      className="MuiToolbar-root-150 MuiToolbar-regular-152 MuiToolbar-gutters-151 AppMenu-nowrap-110"
    >
      <button
        aria-label="Back"
        className="MuiButtonBase-root-160 MuiIconButton-root-154 MuiIconButton-colorInherit-155 AppMenu-menuButton-111"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-159"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-163"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-170"
        />
      </button>
      <h2
        className="MuiTypography-root-177 MuiTypography-title-183 MuiTypography-colorInherit-196 AppMenu-flex-109"
      >
        Test
      </h2>
      <div>
        <button>
          test
        </button>
      </div>
    </div>
  </header>
  <div
    className="AppMenu-spacer-113"
  />
</div>
`;
